bug #5872, transactions should only be restarted with transaction.on flag off if execute_commit has been performed added testcase for this use force send for all executes